fix: testing config

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = stock_trader.settings
+DJANGO_SETTINGS_MODULE = stock_trader.config.dev
 ; also collect tests in django's default app layouts
 python_files = tests.py test_*.py *_tests.py
